♻ refactor: 코드 리팩터링 (2023.07.10 임정민)